vlib/v/checker/tests/unexpected_or.out
vlib/v/checker/tests/unexpected_or.vv:6:17: error: unexpected `or` block, the function `ret_zero` does not return an Option or a Result
    4 | 
    5 | fn main() {
    6 |     _ = ret_zero() or { 1 }
      |                    ~~~~~~~~
    7 | }
